--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
         <div class="logo"><a href="index.html">W.B. Wahyu</a>
         </div>
             <ul class="nav_menu">
-                <li class="nav-links"><a href="index.html">Home</a></li>
+                <li class="nav-links"><a href="index.html">Rumah</a></li>
                 <li class="nav-links"><a href="menu.html">Menu</a></li>
-                <li class="nav-links"><a href="testimonies.html">Testimonies</a></li>
-                <li class="nav-links"><a href="aboutus.html">About Us</a></li>
-                <li class="nav-links"><a href="contact.html">Contact</a></li>
+                <li class="nav-links"><a href="testimonies.html">Testimoni</a></li>
+                <li class="nav-links"><a href="aboutus.html">Tentang Kami</a></li>
+                <li class="nav-links"><a href="contact.html">Kontak</a></li>
             </ul>
             <label for="check" class="checkbox">
                 <i class="ri-menu-line"></i>
@@ -97,11 +97,11 @@
                 <div class="footer-crtby">
                     <h2>Create by</h2><br>
                     <p class="footer-narasi">
-                        <a href="testimonies.html">I Gusti Agung Gde Raditya Pradana (Testimonies) </a><br>
-                        <a href="index.html">I Kadek Malvino Sukadana (Home)</a><br>
+                        <a href="testimonies.html">I Gusti Agung Gde Raditya Pradana (Testimoni) </a><br>
+                        <a href="index.html">I Kadek Malvino Sukadana (Rumah)</a><br>
                         <a href="menu.html">I Made Rai Adnyana (Menu)</a><br>
-                        <a href="aboutus.html">I Wayan Wahyu Putra Dinata (Aboutus)</a><br>
-                        <a href="#">I.B.Gede Ambara Sindu Negara (Contact)</a>
+                        <a href="aboutus.html">I Wayan Wahyu Putra Dinata (Tentang Kami)</a><br>
+                        <a href="#">I.B.Gede Ambara Sindu Negara (Kontak)</a>
                     </p>
                 </div>
 
